--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "boom": "7.x.x",
     "haute-couture": "3.x.x",
-    "joi": "14.x.x"
+    "joi": "14.x.x",
+    "schmervice": "^1.1.0"
   },
   "devDependencies": {
     "code": "5.x.x",
